--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,6 @@
 .App {
   text-align: center;
-}
-
-p {
-  opacity: 0;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-  opacity: 0;
+  visibility: hidden;
 }
 
 .App-header {
@@ -23,15 +14,18 @@ p {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.circle {
+  width: 75px;
+  height: 75px;
+  border-radius: 100%;
+  background-color: #fdcf51;
+  margin: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle.red {
+background-color: #FD5151;
+}
+
+.circle.blue {
+background-color: #51ADFD;
 }
