--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,12 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: row; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
 .circle {
   width: 75px;
@@ -20,6 +20,10 @@
   border-radius: 100%;
   background-color: #fdcf51;
   margin: 50px;
+}
+.circle-container {
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .circle.red {
